greeter/manifests/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v1
  namespace: default
  labels:
    app: greeter
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
      - name: greeter
        image: engjuanser/greeter:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
