greeter/manifests/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
  namespace: default
  labels:
    app: greeter
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
      - name: greeter
        image: engjuanser/greeter:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
