greeter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: default
  labels:
    app: greeter
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: greeter
  type: ClusterIP
