greeter/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: greeter
  namespace: default
spec:
  hosts:
  - greeter-svc
  http:
  - route:
    - destination:
        host: greeter-svc
        subset: v1
      weight: 75
    - destination:
        host: greeter-svc
        subset: v2
      weight: 25
